[gd_scene load_steps=9 format=3 uid="uid://bxmrvuatqmjif"]

[ext_resource type="Script" path="res://Scripts/turret.gd" id="1_l32l7"]
[ext_resource type="PackedScene" uid="uid://rlwhf4bvjeq8" path="res://Objects/bullet.tscn" id="2_vcn5x"]
[ext_resource type="Texture2D" uid="uid://b8odrxmjmfx0q" path="res://Sprites/Turret/Canon/TurretBase.png" id="3_glgqn"]
[ext_resource type="Texture2D" uid="uid://c87ksfxfof310" path="res://Sprites/Turret/Canon/TurretTop.png" id="4_w1liw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cdolg"]
size = Vector2(55, 54)

[sub_resource type="CircleShape2D" id="CircleShape2D_w0rv6"]
radius = 392.703

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qliue"]
bg_color = Color(0.239216, 0.239216, 0.239216, 0.815686)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bcjrg"]
bg_color = Color(1, 0.117647, 0.14902, 1)

[node name="Turret" type="StaticBody2D" node_paths=PackedStringArray("range_collision", "turret_top", "attack_timer", "hpBar") groups=["Turret"]]
collision_layer = 2
script = ExtResource("1_l32l7")
range_collision = NodePath("TurretRange/RangeCollision")
turret_top = NodePath("TurretTop")
attack_timer = NodePath("AtackTimer")
bullet_dmg = 25.0
bullet_scene = ExtResource("2_vcn5x")
hpBar = NodePath("HPBar")

[node name="TurretBase" type="Sprite2D" parent="."]
texture = ExtResource("3_glgqn")

[node name="TurretTop" type="Sprite2D" parent="."]
position = Vector2(-1.13685, -3.92739)
texture = ExtResource("4_w1liw")
offset = Vector2(-6.26184, 0.0263298)

[node name="Out" type="Node2D" parent="TurretTop"]
position = Vector2(22.1369, -0.0726099)

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
light_mask = 2
position = Vector2(1.5, -1)
shape = SubResource("RectangleShape2D_cdolg")

[node name="TurretRange" type="Area2D" parent="."]
visible = false
collision_layer = 4

[node name="RangeCollision" type="CollisionShape2D" parent="TurretRange"]
shape = SubResource("CircleShape2D_w0rv6")

[node name="AtackTimer" type="Timer" parent="."]
one_shot = true

[node name="HPBar" type="ProgressBar" parent="."]
visible = false
offset_left = -32.0
offset_top = 21.0
offset_right = 36.0
offset_bottom = 24.0
theme_override_styles/background = SubResource("StyleBoxFlat_qliue")
theme_override_styles/fill = SubResource("StyleBoxFlat_bcjrg")
show_percentage = false

[connection signal="body_entered" from="TurretRange" to="." method="_on_turret_range_body_entered"]
[connection signal="body_exited" from="TurretRange" to="." method="_on_turret_range_body_exited"]
[connection signal="timeout" from="AtackTimer" to="." method="_on_atack_timer_timeout"]
